--- a/quiz-ui/package.json
+++ b/quiz-ui/package.json
@@ -8,7 +8,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14"
   },
